@@ -118,15 +118,13 @@ public class DefaultEncryptionServivceImpl implements EncryptionService {
    * @throws UnsupportedEncodingException
    */
   @SuppressWarnings("restriction")
-  public static String encrypt(String value)
-      throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException,
-          IllegalBlockSizeException, BadPaddingException, UnsupportedEncodingException {
+  public static String encrypt(String value) throws IllegalBlockSizeException, BadPaddingException {
     String valueToEnc = null;
     String eValue = value;
     for (int i = 0; i < ITERATIONS; i++) {
       valueToEnc = encryption_key + eValue;
       byte[] encValue = c.doFinal(valueToEnc.getBytes(StandardCharsets.UTF_8));
-      eValue = java.util.Base64.getEncoder().encodeToString(encValue);
+      eValue = new BASE64Encoder().encode(encValue);
     }
     return eValue;
   }
